<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ecommerce</string>
    <string name="welcome">A Smarter, Faster, and Easier World</string>
    <string name="sfew">SFEW</string>
    <string name="email">Enter Your Username</string>
    <string name="need_to_register">If You Don\'t Have An Account, </string>
    <string name="login">Login</string>
    <string name="password">Enter Your Password</string>
    <string name="full_name">Full name</string>
    <string name="location">Location on map</string>
    <string name="register">Sign Up</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="we_are">We Are:</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_maps">Map</string>
    <string name="username">Username</string>
    <string name="clothes">Clothes</string>
    <string name="food">Food</string>
    <string name="electronics">Electronics</string>
    <string name="toys">Toys</string>
    <string name="burberry">Burberry</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="rate">Rate</string>
    <string name="update">Update</string>
    <string name="sign_up">Sign up!</string>
    <string name="loading_data">Loading Data</string>
    <string name="_222">222</string>
    <string name="_1111">1111</string>
    <string name="_333">333</string>
    <string name="_444">4444</string>
    <string name="password_">Password</string>
    <string name="loading">Loading ..</string>
</resources>