<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile"/>
    </group>
    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/aboutUs"
                    android:icon="@drawable/ic_about_us"
                    android:title="@string/about_us" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>