<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="@dimen/logo"
        android:layout_height="@dimen/logo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        tools:ignore="PxUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sfew"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/icon"
        android:textStyle="bold"
        tools:ignore="PxUsage,SpUsage" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_hor"
        android:layout_marginVertical="@dimen/mini_margin"
        android:background="@drawable/edit_back"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/rsz_account"
        android:inputType="textEmailAddress"
        android:padding="@dimen/main_padding"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_hor"
        android:layout_marginVertical="@dimen/mini_margin"
        android:background="@drawable/edit_back"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:drawableStart="@drawable/rsz_password"
        android:inputType="textPassword"
        android:padding="@dimen/main_padding"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        tools:ignore="TextFields" />


    <Button
        android:id="@+id/loginBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="@dimen/margin_hor_btn"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/facebook"
            tools:ignore="HardcodedText" />

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/google"
            tools:ignore="ContentDescription" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/need_to_register"
            android:textColor="@color/colorPrimary"
            android:textSize="17dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/mini_margin"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:textSize="17dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

    </LinearLayout>


</LinearLayout>