<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="3dp"
                app:singleSelection="true"
                app:selectionRequired="true">

            </com.google.android.material.chip.ChipGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/brands"
                android:layout_width="match_parent"
                android:layout_height="655dp"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:layout_marginTop="@dimen/mini_margin" />


            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/firstPage"
                    style="@style/CustomChipStyle2"
                    android:layout_width="@dimen/rounded_chip"
                    android:layout_height="wrap_content"
                    android:text="@string/_1111"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/secondPage"
                    style="@style/CustomChipStyle2"
                    android:layout_width="@dimen/rounded_chip"
                    android:layout_height="wrap_content"
                    android:text="@string/_222"
                    android:visibility="gone"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/thirdPage"
                    style="@style/CustomChipStyle2"
                    android:layout_width="@dimen/rounded_chip"
                    android:layout_height="wrap_content"
                    android:text="@string/_333"
                    android:visibility="gone"
                    android:textAlignment="center" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/fourthPage"
                    style="@style/CustomChipStyle2"
                    android:layout_width="@dimen/rounded_chip"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/_444"
                    android:textAlignment="center" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>


    </ScrollView>
</FrameLayout>