<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            tools:ignore="PxUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sfew"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/icon"
            android:textStyle="bold"
            tools:ignore="PxUsage,SpUsage" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="28dp"
                android:background="@drawable/custom_text_view"
                android:orientation="vertical">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:paddingStart="@dimen/mini_margin"
                    android:text="@string/we_are"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,SpUsage" />


                <TextView
                    android:id="@+id/descriptionTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mini_margin"
                    android:paddingStart="@dimen/mini_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fab_margin"
                    tools:ignore="RtlSymmetry,SpUsage" />

            </LinearLayout>

        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="250dp"
            android:text="@string/contact_us"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            tools:ignore="PxUsage,SpUsage" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="@dimen/fab_margin"
                android:src="@drawable/ic_email"
                tools:ignore="ContentDescription,HardcodedText" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="@dimen/fab_margin"
                android:src="@drawable/ic_facebook"
                tools:ignore="ContentDescription,HardcodedText" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="11dp"
                android:src="@drawable/insta"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/mini_margin"
                android:src="@drawable/whatsapp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/mini_margin"
                android:src="@drawable/twitter"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>