<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/main_padding"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/mini_margin"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/logoCIV"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                app:civ_border_color="#000000"
                app:civ_border_width="0.5dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mini_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:text="@string/burberry"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mini_margin"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/firstImage"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/mini_margin"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/burberry"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/location" />

            <TextView
                android:id="@+id/address"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textColor="@color/colorAccent"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/number"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mini_margin"
                android:layout_marginTop="10dp"
                android:text="@string/phone"
                android:textColor="@color/colorAccent"
                android:textSize="15dp"
                tools:ignore="SpUsage" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>